# tasacion-portal

./: .gitignore  CODESPACES_SETUP.md  IMPROVEMENTS.md  MIGRATION_COMPLETE.md  README.md  STRUCTURE.md  explain_model.py  main.py  model_results.csv  pyproject.toml  run.py  shap_feature_importance.csv  shap_values.csv  train_models.py
.devcontainer/: devcontainer.json  setup.sh
outputs/data/: data.csv  lime_explanations.csv  model_results.csv  shap_feature_importance.csv  shap_values.csv
outputs/reports/: interpretability_report.txt
src/tasacion_portal/: __init__.py  __main__.py  explain_model.py  generate_report.py  main.py  process_data.py  run_pipeline.py  scraper.py  train_models.py
tests/: README.md  __init__.py  conftest.py  test_explain_model.py  test_generate_report.py  test_main.py  test_process_data.py  test_scraper.py  test_train_models.py
