[project]
name = "tasacion-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "shap>=0.44.0",
    "lime>=0.2.0",
    "matplotlib>=3.8.0",
    "reportlab>=4.0.0",
    "seaborn>=0.13.0",
]
