[project]
name = "tasacion-portal"
version = "0.1.0"
description = "Property price analysis using machine learning"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
keywords = ["real-estate", "machine-learning", "web-scraping", "price-prediction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "lightgbm>=4.0.0",
    "shap>=0.44.0",
    "lime>=0.2.0",
    "matplotlib>=3.8.0",
    "reportlab>=4.0.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tasacion = "tasacion_portal.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tasacion_portal"]
